ui/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: ui-service
          servicePort: 80
